--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-leaflet/core": "^3.0.0",
+    "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
+    "bootstrap-icons": "^1.11.3",
+    "datatables.net": "^2.3.2",
+    "datatables.net-bs5": "^2.3.2",
+    "jquery": "^3.7.1",
+    "leaflet": "^1.9.4",
+    "leaflet-routing-machine": "^3.2.12",
+    "prop-types": "^15.8.1",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-leaflet": "^5.0.0",
+    "react-router-dom": "^7.8.1",
+    "recharts": "^3.1.2",
+    "sweetalert2": "^11.10.0",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
